# GR5073_Final_Project

./: .gitignore  README.md  data_consolidation.ipynb  main.py  nny.py  pyproject.toml  requirements.txt  test.py
charts/: data_loader.py  park_types.py  parks_accessibility.py  parks_housing.py  parks_time.py
csv_data/: Affordable_Housing_Production_by_Building_20260415.csv  NYC_Parks_Monuments_20260416.csv
rat_charts/: bar2.py  bar3.py  data_loader.py  heat6.py  line1.py  map4.py  scatter5.py  scatter7.py
rat_csv/: mta_stations.csv  nycha.csv  subway_routes.dbf  subway_routes.shp  subway_routes.shx  zip_df.csv  zip_gdf.csv
squirrel_charts/: behavior.py  data_loader.py  maps.py  words.py
squirrel_csv/: squirrel_stories.csv
streamlit_pages/: greenspace.py  home.py  motivation.py  project.py  rodents.py  squirrels.py
