[project]
name = "gr5073-final-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair>=6.1.0",
    "branca>=0.8.2",
    "census>=0.8.26",
    "folium>=0.20.0",
    "geopandas>=1.1.3",
    "jupyter>=1.1.1",
    "mapclassify>=2.10.0",
    "matplotlib>=3.10.9",
    "nltk>=3.9.4",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "prettytable>=3.17.0",
    "pydeck>=0.9.2",
    "pygris>=0.2.1",
    "pyvis>=0.3.2",
    "shapely>=2.1.2",
    "streamlit>=1.56.0",
    "streamlit-folium>=0.27.1",
    "vega-datasets>=0.9.0",
    "wordcloud>=1.9.6",
]
